# ever-crypto-js

./: .gitignore  Cargo.toml  Dockerfile.build  Dockerfile.build.arm64  LICENSE  README.md  ever-crypto-js.darwin-arm64.node  ever-crypto-js.linux-arm64-gnu.node  ever-crypto-js.linux-x64-gnu.node  index.d.ts  index.js  jest.config.js  package-lock.json  package.json
.github/workflows/: publish.yml
examples/: basic-usage.js
src/: lib.rs
tests/: xchacha20poly1305.test.js
